# chairs

./: README.md  main.py  pyproject.toml
chairs/: main.py  test_chairs.py
