[tool.poetry]
name = "chairs"
version = "0.1.0"
description = ""
authors = ["Markus <makupi@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
chairs = "chairs.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
